$Id: NEWS,v 1.664 2005-04-30 18:03:22 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 2584 - mod_sql_postgres missing end-of-comment character.
- Bug 2587 - HideNoAccess does not work for DefaultRoot/<Anonymous> logins.
- Bug 2590 - AIX uses unsigned int for ULONG_MAX, causing printf format warning.
- Bug 2591 - wrong argument type in call to pr_log_debug in mod_delay.c on AIX.
- Bug 2593 - `make install-modules' does not honour DESTDIR enviroment variable.
- Bug 2596 - STAT command can cause segfault.
- Bug 2588 - AIX requires _USE_IRS #define to use hstrerror().
- Bug 2582 - ProFTPD on Tru64 with SIA does not call sia_ses_estab().

1.3.0rc1 - Released 10-Apr-2005
--------------------------------
- Bug 2449 - ProFTPD silently ignores extra command-line parameters
- Bug 2457 - Directory listing provides bad info when path ends with /.
- Bug 2458 - Bad handling of CreateHome parameters.
- Bug 2463 - mod_xfer doesn't check how many bytes it has written to disk.
- Bug 2476 - Incorrect detection of symbolic link loop across devices.
- Add support for a -V command-line option, which displays various
  compile-time settings.
- Bug 2455 - Allow fine-tuning of how often mod_xfer updates the scoreboard.
  This adds an --enable-scoreboard-updates configure option.
- Bug 2389 - 64-bit compilation warnings.
- Bug 2468 - Ability to disable address/port collision checking.  A new
  command-line option, -N, can be used to disable proftpd's checks for
  <VirtualHost> address/port collisions.
- Bug 2488 - Wrong order of privs calls on HP generates "unable to setregid()"
  error (Bug #2317 revisited).