@@ -1,4 +1,4 @@
-<!-- $Id: mod_ctrls_admin.html,v 1.2 2004-11-22 06:09:25 castaglia Exp $ -->
+<!-- $Id: mod_ctrls_admin.html,v 1.3 2005-04-30 19:59:28 castaglia Exp $ -->
 <!-- $Source: /home/proftpd-core/backup/proftp-cvsroot/proftpd/doc/contrib/mod_ctrls_admin.html,v $ -->
 
 <html>
@@ -40,6 +40,7 @@ questions, concerns, or suggestions regarding this module.
 <h2>Control Actions</h2>
 <ul>
   <li><a href="#debug"><code>debug</code></a>
+  <li><a href="#dns"><code>dns</code></a>
   <li><a href="#down"><code>down</code></a>
   <li><a href="#dump"><code>dump</code></a>
   <li><a href="#get"><code>get</code></a>
@@ -145,6 +146,23 @@ A dump of the in-memory configuration structure can also be obtained via this
 control action:
 <pre>
   ftpdctl debug config
+</pre>
+
+<p>
+<hr>
+<h2><a name="dns"><code>dns</code></a></h2>
+<strong>Syntax:</strong> ftpdctl dns <em>on|off</em><br>
+<strong>Purpose:</strong> Enable/disable UseReverseDNS configuration
+
+<p>
+The <code>dns</code> control action can be used to enable or disable
+the <code>UseReverseDNS</code> configuration at run time:
+<pre>
+  # Enable resolution of IP addresses to DNS names
+  ftpdctl dns on
+
+  # Disable resolution of IP addresses to DNS names
+  ftpdctl dns off
 </pre>
 
 <p>
@@ -330,7 +348,7 @@ steps for using third-party modules in ProFTPD:
 
 <p>
 <hr>
-Last Updated: <i>$Date: 2004-11-22 06:09:25 $</i><br>
+Last Updated: <i>$Date: 2005-04-30 19:59:28 $</i><br>
 
 <br><hr>
 
